pkg/lang/testdata/ub/comprehensions/invalid/map-key-shadow.ub
locals: {
  svcs: { web: 8080 }
  out: [ for name in [1] : { for name, port in local.svcs : name => port } ]
}
